--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -125,8 +125,7 @@
 
 .card-title {
   font-weight: bold;
-  font-size: 30px;
-  margin-top: 20px;
+  font-size: 20px;
 }
 
 .post-edit-button {
@@ -248,6 +247,12 @@
   position: relative;
 }
 
+.message {
+  width: 100%;
+  max-height: calc(100% - 100px);
+  overflow-y: auto;
+}
+
 .message-text-area {
   width: 390px;
   height: 35px;
@@ -265,7 +270,8 @@
   background-color: #ea4335;
   color: #eeeed3;
   border: 2px solid #33231d;
-  padding: 10px 15px;
+  padding: 5px 10px;
+  margin: 8px;
   border-radius: 25px;
   max-width: 355px;
   word-wrap: break-word;
@@ -278,6 +284,7 @@
   color: #33231d;
   border: 2px solid #33231d;
   padding: 5px 10px;
+  margin: 8px;
   border-radius: 25px;
   max-width: 355px;
   display: inline-block;
