--- a/app/views/user/homes/top.html.erb
+++ b/app/views/user/homes/top.html.erb
@@ -20,14 +20,14 @@
 
 
 <% @posts.each do |post| %>
-  <div class="card top-post-card shadow text-color mb-3" style="border-radius: 25px;">
+  <div class="card top-post-card shadow text-color mb-3">
     <% if post.post_image.attached? %>
-      <%= image_tag post.post_image, class: "card-img-top", style: "width: 100%;" %>
+      <%= image_tag post.post_image, style: "width: 100%;" %>
     <% else %>
-      <%= image_tag 'no_image2.png', class: "card-img-top", style: "width: 100%;" %>
+      <%= image_tag 'no_image2.png', style: "width: 100%;" %>
     <% end %>
     <div class="card-body">
-      <h5 class="card-title" style="font-weight: bold; font-size: 20px;"><%= post.title %></h5>
+      <h5 class="card-title"><%= post.title %></h5>
       <p>
         <%= link_to user_path(post.user) do %>
           <%= image_tag post.user.get_profile_image(40, 40), class: "rounded-circle" %>
@@ -39,13 +39,13 @@
       <p class="card-text">
         <div class="d-flex justify-content-between align-items-center">
           <%= link_to post_path(post.id) do %>
-            <button class="btn btn-dark button" style="border-radius: 25px;">詳細を見る</button>
+            <button class="btn button">詳細を見る</button>
           <% end %>
           <div class="d-flex align-items-center mr-3">
             <div id="like_btn_<%= post.id %>">
               <%= render 'user/likes/btn', post: post %>
             </div>
-            <i class="fa-regular fa-comment-dots fa-2x ml-4 mr-2" style="color: #33231d;"></i>
+            <i class="fa-regular fa-comment-dots ml-4 mr-2 fa-2x" style="color: #33231d;"></i>
             <span style="font-size: 24px; color: #33231d;"><%= post.post_comments.count %></span>
           </div>
         </div>
