--- a/app/views/user/posts/edit.html.erb
+++ b/app/views/user/posts/edit.html.erb
@@ -44,7 +44,7 @@
   </table>
 
   <div class="text-center" style="margin-top: 40px; margin-bottom: 50px;">
-    <%= f.submit "保存する", class: "btn-lg btn-dark button", style: "border-radius: 25px;" %>
+    <%= f.submit "保存する", class: "btn-lg button" %>
   </div>
 
   <% end %>
