--- a/app/views/user/posts/new.html.erb
+++ b/app/views/user/posts/new.html.erb
@@ -44,8 +44,8 @@
     </tbody>
   </table>
 
-  <div class="text-center " style="margin-top: 40px; margin-bottom: 40px;">
-    <%= f.submit "投稿する", class: "btn-lg btn-dark button", style: "border-radius: 25px;" %>
+  <div class="text-center" style="margin-top: 40px; margin-bottom: 40px;">
+    <%= f.submit "投稿する", class: "btn-lg button"%>
   </div>
 
   <% end %>
