--- a/app/views/user/users/confirm.html.erb
+++ b/app/views/user/users/confirm.html.erb
@@ -21,12 +21,11 @@
     </tr>
     <tr>
       <td class="text-center">
-        <div class="d-flex justify-content-center" style="margin-bottom: 165px;">
+        <div class="d-flex justify-content-center" style="margin: 20px 0 145px 0; ">
           <%= link_to "戻る", edit_mypage_path,
-          class: "btn btn-outline-secondary go-back-button mr-2", style: "border-radius: 25px;" %>
+          class: "btn go-back-button mr-2"%>
           <%= link_to "退会する", user_path(0),
-          class: "btn btn-danger button ml-2", style: "border-radius: 25px;",
-          method: :delete, data: { confirm: "本当に退会しますか？" } %>
+          class: "btn button ml-2", method: :delete, data: { confirm: "本当に退会しますか？" } %>
         </div>
       </td>
     </tr>
