--- a/app/views/user/users/likes.html.erb
+++ b/app/views/user/users/likes.html.erb
@@ -1,6 +1,6 @@
 <div class="container" style="width: 50%; margin: auto; margin-top: 30px;">
   <div class="liked-posts-heading">
-    <i class="fa-solid fa-heart"></i> <span >いいねした投稿</span>
+    <i class="fa-solid fa-heart"></i> <span>いいねした投稿</span>
   </div>
 </div>
 
@@ -19,7 +19,7 @@
           <%= link_to post.title, post_path(post.id), style: "color: #33231d;" %>
         </div>
       </td>
-      <td>
+      <td class="text-center" style="width: 50px;">
         <% if current_user.likes.exists?(post_id: post.id) %>
           <i class="fa-solid fa-heart mr-1"></i><%= post.likes.count %>
         <% else %>
