--- a/app/views/user/users/mypage.html.erb
+++ b/app/views/user/users/mypage.html.erb
@@ -33,12 +33,12 @@
     <tr>
       <td colspan="3" class="text-center">
         <%= link_to edit_mypage_path, class: "text-dark" do %>
-          <button class="btn btn-outline-dark post-edit-button mr-1" style="border-radius: 25px;width: 145px;">
+          <button class="btn post-edit-button mr-1" style="width: 145px;">
             編集 <i class="fa-solid fa-pen"></i>
           </button>
         <% end %>
         <%= link_to likes_user_path(@user), class: "text-dark" do %>
-          <button class="btn btn-outline-dark post-edit-button ml-1" style="border-radius: 25px; width: 145px;">
+          <button class="btn post-edit-button ml-1" style="width: 145px;">
             いいね <i class="fa-solid fa-heart"></i>
           </button>
         <% end %>
@@ -47,8 +47,8 @@
   </table>
 </div>
 
-<div style="font-weight: bold; font-size: 25px; margin-top: 40px; margin-bottom: 20px;"
-     class="text-center text-color">
+<div class="text-center text-color"
+     style="font-weight: bold; font-size: 25px; margin: 40px 0 20px 0;">
   【プロフィール】
 </div>
 
@@ -97,8 +97,8 @@
   </table>
 </div>
 
-<div style="font-weight: bold; font-size: 25px; margin-top: 40px; margin-bottom: 20px;"
-     class="text-center text-color">
+<div class="text-center text-color"
+     style="font-weight: bold; font-size: 25px; margin: 40px 0 20px 0;">
   【投稿一覧】
 </div>
 
